--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,9 @@ body {
     color: #0d0d0d;
 }
 
-.main-head nav{
-    margin-left: 700px;
-}
-
 .searchbar {
     font-family: "Press Start 2P", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
-    margin-left:500px; 
 }
 
 nav ul {
@@ -50,14 +45,14 @@ nav li {
 .cta-main{
     font-size: 22px;
     font-weight: 400;
-    padding: 4px 15px;
+    padding: 0px;
     border: 5px solid #707070;
     border-radius: 12px;  
 }
 
 .cta-sub{
     font-size: 35px;
-    padding: 0px 72px;
+    padding: 0px;
     font-weight: 400;
     border: 5px solid #707070;
     border-radius: 12px 12px 0px 0px;
@@ -83,20 +78,51 @@ footer {
     text-align: center;
 }
 
-/*Links*/
-a{
-    text-decoration: none;
-    color: #0d0d0d;
-}
-
-/* Home Page*/
 .banner {
-    background-image: url("../images/Banner\ Large.png");
     width: 100%;
     height: 350px;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-x: right;
+}
+
+.banner-home {
+    background-image: url("../images/Banners/Banner\ Large.png");
+}
+
+.banner-playstation{ 
+    background-image: url("../images/Banners/Playstation\ Banner.png");
+}
+
+.banner-xbox {
+    background-image: url("../images/Banners/Xbox\ Banner.png");
+}
+
+.banner-nintendo {
+    background-image: url("../images/Banners/Nintendo\ Banner.png");
+}
+
+.banner-pc {
+    background-image: url("../images/Banners/PC\ Banner.png");
+}
+
+.banner-deals {
+
+}
+
+.banner-games {
+
+}
+
+.banner-pre-order {
+
+}
+
+.banner-used {
+
+}
+
+.banner-systems {
+    background-image: url("../images/Banners/Systems\ Banner.png");
 }
 
 .gamehub-phrase {
@@ -120,6 +146,11 @@ a{
     flex: 1;
 }
 
+/*Links*/
+a{
+    text-decoration: none;
+    color: #0d0d0d;
+}
 
 
 /*Contact Page*/
