--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,12 @@ body {
     font-family: "Oswald",'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
     font-weight: 500;
 }
+
+main {
+    max-width: 1600px;
+    margin: auto;
+}
+
 .logo img {
     min-width: 135px;
     min-height: 85px;
